--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,8 @@
             "use": "@vercel/node"
         },
         {
-            "src": "src/**/*",
-            "use": "@vercel/static-build",
-            "config": { "distDir": "build" }
+            "src": "package.json",
+            "use": "@vercel/static-build"
         }
     ],
     "routes": [
